# phasesweep

./: .gitignore  .gitmodules  MANIFEST.in  README.md  TODO.md  doc_check.py  pyproject.toml
.github/workflows/: ci.yml
docs/: TODO.md  config.md  config_reference.yaml  development.md  mcp.md  mcp_setup.md  phasesweep_map.html  roadmap.md  runtime.md
examples/: catalog.yaml  experiment.yaml  fake_train.py  mcp_experiment.yaml
examples/decoder_pytorch_template/: README.md  base.yaml  catalog.yaml  experiment.yaml  mcp_experiment.yaml  run_trial.py
examples/tiny_decoder_enwik8/: README.md  base.yaml  catalog.yaml  experiment.yaml  gpu_smoke.yaml  mcp_experiment.yaml  run_trial.py
scripts/: mcp_workflow_eval.py
src/phasesweep/: __init__.py  __main__.py  _metadata.py  _runtime.py  cli.py  config.py  gates.py  gpu_pool.py  orchestrator.py  overrides.py  process.py  runner.py  selector.py  storage_urls.py
src/phasesweep/config/: __init__.py  common.py  io.py  models.py  search.py
src/phasesweep/engine/: __init__.py  errors.py  guards.py  optuna.py  phase.py  read.py  run.py  selection.py  state.py  trial.py
src/phasesweep/evidence/: __init__.py  evaluation.py  models.py  wandb.py
src/phasesweep/examples/: __init__.py  fake_train.py
src/phasesweep/extractors/: __init__.py  base.py
src/phasesweep/mcp/: __init__.py  agent_prompt.md  audit.py  config_snapshot.py  errors.py  redaction.py  registry.py  runner.py  runs.py  scaffold.py  server.py  snapshots.py  time.py
src/phasesweep/mcp/install/: __init__.py  edits.py  installer.py  targets.py
src/phasesweep/runtime/: __init__.py  commands.py  files.py  gpu.py  json.py  process.py  supervisor.py
tests/: conftest.py  mcp_helpers.py  test_cli.py  test_config.py  test_config_reference.py  test_docs_sync.py  test_e2e.py  test_engine_read.py  test_extractors.py  test_filesystem_layout.py  test_fingerprint.py  test_gpu_pool.py  test_locking.py  test_mcp_check.py  test_mcp_e2e.py  test_mcp_install.py  test_mcp_redaction.py  test_mcp_registry.py  test_mcp_runner.py  test_mcp_runs.py  test_mcp_scaffold.py  test_mcp_server.py  test_mcp_status_timing.py  test_mcp_workflow_eval.py  test_overrides.py  test_param_validation.py  test_process_supervision.py  test_protocol.py  test_public_metadata.py  test_publication_transaction.py  test_runtime_behavior.py  test_selector.py  test_stale_reaper.py  test_storage_urls.py  test_tiny_decoder_example.py  test_trial_launch.py  test_wandb_extractor.py
