[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=9.2"]
build-backend = "setuptools.build_meta"

[project]
name = "phasesweep"
dynamic = ["version"]
description = "YAML-driven phase-chained hyperparameter sweeps with Optuna: each phase's winner is set for all following sweeps."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Peter Szemraj" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "experiments",
    "hyperparameter-optimization",
    "machine-learning",
    "optuna",
    "sweeps",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "optuna>=4.0",
    "cmaes>=0.10",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "typing-extensions>=4.1",
    "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
wandb = ["wandb>=0.16"]
mcp = ["mcp>=1.27,<1.28"]
dev = [
    "pytest>=7",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "mcp>=1.27,<1.28",
]

[project.scripts]
phasesweep = "phasesweep.cli:main"
phasesweep-mcp = "phasesweep.mcp.server:main"

[project.urls]
Homepage = "https://github.com/pszemraj/phasesweep"
Documentation = "https://github.com/pszemraj/phasesweep/tree/main/docs"
Repository = "https://github.com/pszemraj/phasesweep.git"
Issues = "https://github.com/pszemraj/phasesweep/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
"phasesweep.mcp" = ["agent_prompt.md"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["examples/tiny_decoder_enwik8/upstream"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "D", "ANN"]
ignore = [
    "E501",     # let formatter handle line length
    "D100",     # missing docstring in public module (we have them on all important ones)
    "D104",     # missing docstring in public package
    "D105",     # missing docstring in magic method
    "D107",     # missing docstring in __init__
    "D203",     # conflicts with D211
    "D213",     # conflicts with D212
    "ANN401",   # Dynamically typed expressions (typing.Any)
    "ANN002",   # missing *args annotation
    "ANN003",   # missing **kwargs annotation
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]  # tests don't need docstrings or annotations

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
